ROH Registers and 1 reg added

--- a/templates/ROH_home.html
+++ b/templates/ROH_home.html
@@ -10,4 +10,10 @@
 
 <h1>ROH Home</h1>
 
+<div>
+    <ul class="list-group">
+        <li class="list-group-item"><a href="{%url 'ROH_Register'%}">Registers</a></li>
+    </ul>
+</div>
+
 {%endblock content%}
