--- a/templates/ROH/Registers.html
+++ b/templates/ROH/Registers.html
@@ -15,7 +15,7 @@
     
     <ul class="list-group">
         <li class="list-group-item"><a href="{%url 'WRJudwR'%}">Wheel Recieved From JUDW</a></li>
-        <li class="list-group-item"><a href="#">Wheel Dispatched To JUDW</a></li>
+        <li class="list-group-item"><a href="{%url 'WDJudwR'%}">Wheel Dispatched To JUDW</a></li>
         <li class="list-group-item"><a href="#">Hot Axle Wagon Register</a></li>
     </ul>
 </div>
