--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="{%static 'home/main.css'%}">
-        {%block title%}{%endblock title%}
+        <title>{%block title%}{%endblock title%}</title>
     </head>
     <body class='bg-primary'>
         <!-- #region Navbar-->
