--- a/templates/ROH/Registers.html
+++ b/templates/ROH/Registers.html
@@ -17,6 +17,7 @@
         <li class="list-group-item"><a href="{%url 'WRJudwR'%}">Wheel Recieved From JUDW</a></li>
         <li class="list-group-item"><a href="{%url 'WDJudwR'%}">Wheel Dispatched To JUDW</a></li>
         <li class="list-group-item"><a href="{%url 'HAWR'%}">Hot Axle Wagon Register</a></li>
+        <li class="list-group-item"><a href="{%url 'GC'%}">Gauge Calibration Register</a></li>
     </ul>
 </div>
 
