--- a/templates/ROH/registerWheelRecievedJudw/registerWheelRecievedJudw_edit.html
+++ b/templates/ROH/registerWheelRecievedJudw/registerWheelRecievedJudw_edit.html
@@ -7,6 +7,7 @@
     </div>
 <form action="" method="post">
     {% csrf_token %}
+    <h3> Important! date format : YYYY-MM-DD</h3>
     <a class="btn btn-success" href="{% url 'WRJudwR_detail' object.id %}"> Back</a>  
     <input class="btn btn-success" type="submit" value="Update" />
     {{ form|crispy }} 
